--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
+
+
+@tailwind utilities;
 
 :root {
   --background: #ffffff;
@@ -20,7 +24,8 @@
 }
 
 body {
+  @apply font-sans;
   background: var(--background);
-  color: var(--foreground);
+  color: var(--foreground); 
   font-family: Arial, Helvetica, sans-serif;
 }
